@@ -66,7 +66,7 @@ public class TextNodeTest {
     assertEquals(IReadTransaction.NULL_NAME_KEY, node3.getNameKey());
     assertEquals(IReadTransaction.NULL_NAME_KEY, node3.getURIKey());
     assertEquals(IReadTransaction.NULL_NAME_KEY, node3.getPrefixKey());
-    assertEquals(2, node3.getValue().length);
+    assertEquals(2, node3.getRawValue().length);
     assertEquals(IReadTransaction.TEXT_KIND, node3.getKind());
     assertEquals(false, node3.hasFirstChild());
     assertEquals(true, node3.hasParent());
